# Chip

./: .coveragerc  DEVELOPMENT_NOTES.md  Loop-DSPy-Groq-Server-Plan.md  LoopMessage-iMessage-API-Mock-Spec.md  README.md  main.py  pyproject.toml  requirements.txt
.cursor/: chip-the-AI-Agent.md  dspy.md  groq.md  neigborengineers.md  student-interns-project.md  supabasepy.md
app/: __init__.py  config.py
app/adapters/: __init__.py  base.py  loop.py  registry.py
app/agents/: dspy_agent.py
app/models/: messages.py
app/routers/: agent_test.py  health.py  loop_webhook.py  messaging.py
docs/: ARCHITECTURE.md  TESTING.md
tests/: conftest.py  test_contract_loop_examples.py  test_docs_keep_running.md  test_health.py  test_loop_adapter.py  test_loop_normalize.py  test_registry.py  test_root.py  test_signature_verification.py  test_webhook_errors.py  test_webhook_flow.py  test_webhook_loop.py
