[project]
name = "chip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.100.0",
    "hypercorn==0.14.4",
    "python-dotenv>=1.1.1",
    "supabase>=2.18.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "ruff>=0.12.8",
]
